Added Weather App info to portfolio

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<li class="active"><a href="index.html">My Portfoilio</a></li>
 						</ul>
 						<ul class="icons">							
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/tiana-t-52b67bb8/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/Chromittily" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -46,22 +46,23 @@
 								<header class="major">
 									
 									<h2><a href="#">My Name Is</br> Tiana Terrell</a></h2>
-									<p>Take a look at my favorite project. It's a personal game project that I'm currently working on:</br> Tani and Tobi: Journey through Tewa-Tuna.</p>
+									<p>Take a look at my most recent Weather App project. I followed this tutorial to make it: <a>https://www.youtube.com/watch?v=WZNG8UomjSI</a>.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://chromittily.github.io/Weather-App/" class="image main"><img src="images/Preview of App.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Try Demo Here</a></li>
-									<li><a href="#" class="button large">Source Code</a></li>									
+									<li><a href="https://chromittily.github.io/Weather-App/" class="button large">Try Demo Here</a></li>
+									<li><a href="https://github.com/Chromittily/Weather-App" class="button large">Source Code</a></li>									
 								</ul>
-								<p>Responsibilities:										
-									<li></li>	
-									<li></li>	
-									<li></li>	
+								<p>	<strong><h4 style="text-align: left;">**Note**</h4></strong>[ The current input is <strong>ONLY</strong> through <strong>"cities"</strong>. Not city/state, nor city/country.]
+								</br>	
+								</br><strong>Responsibilities:</strong>									
+									<li style="text-align: left;">Call the OpenWeatherMap API through fetch in JavaScript.</li>	
+									<li style="text-align: left;">Call for specific city related backgrounds from Unsplash.com</li>	
+									<li style="text-align: left;">Pull name, description, humidity, wind speed, and current weather icon from JSON weather data and display the information on website.</li>	
 								</p> 	
-								<p>Challenges:	
-									<li></li>	
-									<li></li>	
-									<li></li></p>
+								<p><strong>Challenges:</strong>	
+									<li style="text-align: left;">It was difficult to follow the tutorial at times since websites had updated their interface and where to get access to links.</li>	
+									</p>
 							</article>
 
 						<!-- Posts -->
